--- a/DataCleaner.ipynb
+++ b/DataCleaner.ipynb
@@ -3,17 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +44,7 @@
     "cleaned_file_path = 'Cleaned_Camp_Market.xlsx'  # You can change the file name as needed\n",
     "filtered_data.to_excel(cleaned_file_path, index=False)\n",
     "\n",
-    "print(\"Cleaned data saved to:\", cleaned_file_path)\n"
+    "print(\"Cleaned data saved to:\", cleaned_file_path)"
    ]
   }
  ],
