--- a/DataCleaner.ipynb
+++ b/DataCleaner.ipynb
@@ -8,43 +8,38 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Load the dataset from an Excel file\n",
-    "file_path = 'Camp_Market.xlsx'  # Replace with your file path\n",
+    "# Chargement des données à partir du fichier Excel\n",
+    "file_path = 'Camp_Market.xlsx'  # Remplacez par le chemin de votre fichier\n",
     "data = pd.read_excel(file_path)\n",
     "\n",
-    "# Set the first row as header if necessary (adjust if your data already has headers)\n",
-    "data.columns = data.iloc[0]  # Set the first row as header\n",
-    "data = data.drop(0)  # Drop the first row as it's now header\n",
+    "# Si nécessaire, définir la première ligne comme en-tête\n",
+    "data.columns = data.iloc[0]\n",
+    "data = data.drop(0)\n",
     "\n",
-    "# Convert 'Year_Birth' and 'Income' to numeric\n",
+    "# Conversion des colonnes 'Year_Birth' et 'Income' en numérique\n",
     "data['Year_Birth'] = pd.to_numeric(data['Year_Birth'], errors='coerce')\n",
     "data['Income'] = pd.to_numeric(data['Income'], errors='coerce')\n",
     "\n",
-    "# Find all product expenditure columns (assuming they start with 'Mnt')\n",
+    "# Calculer le total des dépenses par client\n",
     "product_columns = [col for col in data.columns if col.startswith('Mnt')]\n",
-    "\n",
-    "# Calculate the total spent for each person\n",
     "data['Total_Spent'] = data[product_columns].sum(axis=1)\n",
     "\n",
-    "# Define thresholds for cleaning\n",
-    "threshold_income = 5000  # Income below this is considered low\n",
-    "threshold_spent = 1000   # Spending above this is considered too high for low income\n",
+    "# Définition des seuils pour le nettoyage\n",
+    "threshold_income = 5000\n",
+    "threshold_spent = 1000\n",
     "\n",
-    "# Remove rows where 'Marital_Status' is 'YOLO'\n",
+    "# Suppression des statuts 'YOLO' et filtrage selon les seuils définis\n",
     "data = data[data['Marital_Status'] != 'YOLO']\n",
-    "\n",
-    "# Filter the data: Keep people born after 1900, and remove those with low income but high spending\n",
     "filtered_data = data[\n",
-    "    (data['Year_Birth'] >= 1900) &  # Remove those born before 1900\n",
-    "    ((data['Income'] > threshold_income) |  # Keep people with reasonable income\n",
-    "     (data['Total_Spent'] <= threshold_spent))  # Or keep people with reasonable spending\n",
+    "    (data['Year_Birth'] >= 1900) & \n",
+    "    ((data['Income'] > threshold_income) | (data['Total_Spent'] <= threshold_spent))\n",
     "]\n",
     "\n",
-    "# Save the cleaned data to a new Excel file\n",
-    "cleaned_file_path = 'Cleaned_Camp_Market.xlsx'  # You can change the file name as needed\n",
+    "# Sauvegarde des données nettoyées\n",
+    "cleaned_file_path = 'Cleaned_Camp_Market.xlsx'\n",
     "filtered_data.to_excel(cleaned_file_path, index=False)\n",
     "\n",
-    "print(\"Cleaned data saved to:\", cleaned_file_path)"
+    "print(\"Les données nettoyées ont été enregistrées sous :\", cleaned_file_path)\n"
    ]
   }
  ],
