--- a/Code_Graphiques.ipynb
+++ b/Code_Graphiques.ipynb
@@ -1,10 +1,34 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "id": "eb62e208",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Chargement des données"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e53b3fd",
+   "metadata": {},
+   "source": [
+    "# Visualisation des données"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Erreur : Le fichier 'Camp_Market.xlsx' est introuvable.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -23,11 +47,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mhead()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a576a871",
+   "metadata": {},
+   "source": [
+    "# Transformation des données"
    ]
   },
   {
@@ -59,6 +103,14 @@
     "\n",
     "\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f26e953",
+   "metadata": {},
+   "source": [
+    "# Exploration des données"
    ]
   },
   {
@@ -111,6 +163,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "804f88ea",
+   "metadata": {},
+   "source": [
+    "# Visualisation des données"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -136,6 +196,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "46025428",
+   "metadata": {},
+   "source": [
+    "# Visualisation des données"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -158,6 +226,14 @@
     "# Affichez le graphique\n",
     "plt.legend(loc='upper right')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9350ea36",
+   "metadata": {},
+   "source": [
+    "# Visualisation des données"
    ]
   },
   {
@@ -227,6 +303,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "93ba8cc4",
+   "metadata": {},
+   "source": [
+    "# Visualisation des données"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15bac823",
+   "metadata": {},
+   "source": [
+    "# Clustering des clients"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -287,6 +379,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f511e963",
+   "metadata": {},
+   "source": [
+    "# Clustering des clients"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -331,6 +431,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c120c393",
+   "metadata": {},
+   "source": [
+    "# Clustering des clients"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -347,6 +455,22 @@
     "\n",
     "# J'affiche le nombre de clients dans chaque cluster\n",
     "print(nbr_customers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "188568fa",
+   "metadata": {},
+   "source": [
+    "# Visualisation des données"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6bd5582",
+   "metadata": {},
+   "source": [
+    "# Clustering des clients"
    ]
   },
   {
@@ -367,6 +491,14 @@
     "\n",
     "# J'affiche le graphique final\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6864c0a",
+   "metadata": {},
+   "source": [
+    "# Visualisation des données"
    ]
   },
   {
@@ -395,6 +527,14 @@
     "    \n",
     "    # J'affiche le graphique pour le cluster courant\n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee542978",
+   "metadata": {},
+   "source": [
+    "# Visualisation des données"
    ]
   },
   {
@@ -433,6 +573,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "28cc2754",
+   "metadata": {},
+   "source": [
+    "# Visualisation des données"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -462,6 +610,14 @@
     "\n",
     "    # J'affiche le graphique pour la campagne actuelle\n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "467c7860",
+   "metadata": {},
+   "source": [
+    "# Visualisation des données"
    ]
   },
   {
